# agent-token-usage-tui

./: .cnb.yml  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  clippy.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml
migrations/: 001_init.sql  002_windsurf_sessions.sql  003_windsurf_cost_diffs.sql
plans/: agent-token-usage-tui-architecture-77d40b.md  phase1-skeleton-commits.md  phase2-storage-pricing-commits.md  phase3-collectors-claude-codex-commits.md  phase4-collectors-rest-pipeline-commits.md  phase5-tui-overview-commits.md  phase6-tui-views-commits.md  phase7-polish-release-commits.md  phase8-post-release-commits.md  windsurf-exporter-future-improvements.md
src/: app_dir.rs  app_dir_tests.rs  cli.rs  config.rs  config_tests.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  pipeline.rs  pipeline_tests.rs  startup_ui.rs  startup_ui_tests.rs
src/collector/: claude.rs  claude_tests.rs  codex.rs  codex_tests.rs  mod.rs  mod_tests.rs  openclaw.rs  openclaw_tests.rs  opencode.rs  opencode_tests.rs  reporter.rs  reporter_tests.rs  util.rs  util_tests.rs  windsurf.rs  windsurf_tests.rs
src/domain/: mod.rs  price.rs  prompt.rs  record.rs  record_tests.rs  session.rs  source.rs  source_tests.rs  windsurf_cost_diff.rs  windsurf_session.rs
src/pricing/: cost.rs  cost_tests.rs  fallback.rs  fallback_tests.rs  mod.rs  mod.rs.new  sync.rs
src/storage/: costs.rs  costs_tests.rs  file_state.rs  file_state_tests.rs  mod.rs  mod_tests.rs  pricing.rs  pricing_tests.rs  queries.rs  queries_tests.rs  records.rs  records_tests.rs  schema.rs  schema_tests.rs  windsurf_cost_diffs.rs  windsurf_cost_diffs_tests.rs  windsurf_sessions.rs  windsurf_sessions_tests.rs
src/tui/: app.rs  app_tests.rs  mod.rs  render.rs  render_tests.rs
tests/: cli_scan_test.rs  cli_sync_prices_test.rs  collector_claude_test.rs  collector_codex_test.rs  collector_openclaw_test.rs  collector_opencode_test.rs  pricing_integration_test.rs
tests/fixtures/claude/: simple.jsonl
tests/fixtures/codex/: simple.jsonl
tests/fixtures/openclaw/demo-agent/sessions/: s1.jsonl
tools/windsurf-exporter/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
tools/windsurf-exporter/src/: api.ts  extension.ts  types.ts  writer.ts
