[package]
name = "agent-token-usage-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Cross-platform TUI that aggregates Claude Code / Codex / OpenClaw / OpenCode sessions and reports token usage and cost."
repository = "https://github.com/briqt/agent-token-usage-tui"
readme = "README.md"
keywords = ["tui", "ai", "token", "usage", "cost"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "agent-token-usage-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "gzip"] }
rusqlite = { version = "0.39.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[build-dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "blocking"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
