[package]
name = "agent-token-usage-tui"
version = "0.2.6"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Cross-platform TUI that aggregates Claude Code / Codex / OpenClaw / OpenCode sessions and reports token usage and cost."
repository = "https://cnb.cool/prevailna/agent-token-usage-tui"
readme = "README.md"
keywords = ["tui", "ai", "token", "usage", "cost"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "agent-token-usage-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "gzip"] }
rusqlite = { version = "0.39.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[build-dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "blocking"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"

# Strict lint policy (inspired by Codex's workspace lints; see plan/codex-best-practices.md).
# Test code overrides for `unwrap_used` / `expect_used` live in `clippy.toml`.
[lints.clippy]
# Correctness: surface panics that should be Result propagation.
expect_used = "deny"
unwrap_used = "deny"

# Style: keep format strings readable and idioms consistent.
uninlined_format_args = "deny"
redundant_closure_for_method_calls = "deny"
needless_borrow = "deny"
manual_clamp = "deny"
implicit_clone = "deny"
explicit_iter_loop = "deny"
explicit_into_iter_loop = "deny"

# Anti-patterns we never want in production code.
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
large_enum_variant = "deny"

# Output hygiene: TUI mode must not write to stdout/stderr directly (use tracing).
print_stdout = "deny"
print_stderr = "deny"

# ---- Release profiles --------------------------------------------------------
#
# The default `cargo build --release` should produce the binary users actually
# ship — small, fast, no debug metadata. Full LTO + single codegen unit gives
# meaningful size savings for a ratatui + rusqlite + reqwest binary at the
# cost of a noticeably longer link step (expected ~3 min on a cold build).
# panic=abort drops unwind tables; we don't ship rescue paths that rely on
# catch_unwind.

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

# `cargo build --profile dist` is the release-style profile for distributable
# artifacts: everything release has, plus extra aggressive size trims we
# wouldn't want polluting day-to-day builds (debug-assertions off, overflow
# checks off, incremental off). Inherits from `release` via the `inherits` key.

[profile.dist]
inherits = "release"
debug = false
overflow-checks = false
debug-assertions = false
